--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/"
+            "baseHref": "/portfolio-site/"
           }
         }
       }
